Update files for nba player data
