# swagger/swagger.yaml
@@ -16,14 +16,11 @@ definitions:
     type: object
   models.Document:
     properties:
-      country:
-        description: URL of article
-        type: string
-      lat:
-        description: Latitude of city
-        type: string
-      lng:
+      active:
         description: Longitude of city
+        type: string
+      link:
+        description: Latitude of city
         type: string
       name:
         description: Title of article
@@ -31,17 +28,17 @@ definitions:
     type: object
   swagger.SwaggerResponse:
     properties:
-      country:
-        description: Author of article
-        example: Austria
-        type: string
-      location:
+      active:
         description: Topics of article
-        example: 48.20849,16.37208
+        example: 1985-2003
+        type: string
+      link:
+        description: Author of article
+        example: https://www.nba.com
         type: string
       name:
         description: URL of doc
-        example: Wien
+        example: Michael Jordan
         type: string
     type: object
   swagger.SwaggerSearchResponse:
@@ -225,47 +222,6 @@ paths:
         in: query
         name: geo
         type: boolean
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Ok
-          schema:
-            $ref: '#/definitions/swagger.SwaggerSearchResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.ApiError'
-        "500":
-          description: Server Error
-          schema:
-            $ref: '#/definitions/models.ApiError'
-      summary: Search Redisearch documents
-      tags:
-      - Search
-  /api/search/geo:
-    get:
-      operationId: country geo search
-      parameters:
-      - description: Longitude
-        in: query
-        name: longitude
-        required: true
-        type: string
-      - description: Latitude
-        in: query
-        name: latitude
-        required: true
-        type: string
-      - description: Radius
-        in: query
-        name: radius
-        required: true
-        type: string
-      - description: Limit number of results
-        in: query
-        name: limit
-        type: integer
       produces:
       - application/json
       responses:
